--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "NgRx Files",
 	"description": "Scaffold NgRx files",
 	"version": "0.0.1",
-    "publisher": "lorrandavid",
+	"publisher": "lorrandavid",
 	"engines": {
 		"vscode": "^1.42.0"
 	},
@@ -51,8 +51,7 @@
 		"lint": "eslint src --ext ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js",
-		"postinstall": "node ./node_modules/vscode/bin/install"
+		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
 		"@types/mustache": "^4.0.0",
